# Neural_Wings-demo

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
assets/config/: cameras_config.json  engine_config.json
assets/prefabs/: bullet.json  cube.json  light_sphere.json  plane.json  remote_player.json  rotate_cube.json
assets/scenes/: test_scene.json
assets/shaders/particles/: test_update.vs
assets/shaders/postprocess/: bloom.fs  blur.fs
assets/shaders/postprocess/GTAO/: gtao.fs
assets/view/: test_view.json
post-process-editor/src/: App.tsx  store.ts
server/: CMakeLists.txt  GameServer.cpp  GameServer.h  main.cpp  nbnet_server_impl.c
src/: main.cpp
src/Engine/: Engine.h
src/Engine/Config/: EngineConfig.h
src/Engine/Core/: GameWorld.cpp  GameWorld.h
src/Engine/Core/Components/: Components.h  RenderComponent.h  RigidBodyComponent.h  TransformComponent.h
src/Engine/Core/GameObject/: GameObject.cpp  GameObject.h  GameObjectFactory.cpp
src/Engine/Graphics/: Graphics.h  ParticleTODO.md  RenderMaterial.h  Renderer.cpp  Renderer.h  ShaderWrapper.cpp
src/Engine/Graphics/Lighting/: LightingManager.cpp
src/Engine/Graphics/Particle/: ParticleEmiter.cpp  ParticleSystem.cpp
src/Engine/Graphics/ParticleSystem/: GPUParticle.h  GPUParticleBuffer.cpp  GPUParticleBuffer.h  IParticleInitializer.h  ParticleEmiter.cpp  ParticleEmitter.h  ParticleSystem.h
src/Engine/Graphics/PostProcess/: PostProcesser.cpp  PostProcesser.h
src/Engine/Math/: Math.h
src/Engine/Math/Complex/: Complex.cpp  Complex.h
src/Engine/Math/Core/: MathCommon.h
src/Engine/Math/LinearAlgebra/Matrix/: Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quat4f.cpp
src/Engine/Math/LinearAlgebra/Vector/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector3f.cpp  Vector4.cpp  Vector4.h
src/Engine/Network/: NetTypes.h  Network.h
src/Engine/Network/Client/: NetworkClient.cpp  NetworkClient.h
src/Engine/Network/Protocol/: Messages.h  PacketSerializer.h
src/Engine/Network/Sync/: NetworkSyncSystem.cpp  NetworkSyncSystem.h
src/Engine/Network/Transport/: ENetTransport.cpp  ENetTransport.h  INetworkTransport.h  NullTransport.h  TransportFactory.cpp  TransportFactory.h
src/Engine/System/: System.h
src/Engine/System/Physics/: PhysicsSystem.cpp
src/Engine/System/Physics/Stages/: CollisionStage.cpp  CollisionStage.h
src/Engine/System/Resource/: ResourceManager.cpp  ResourceManager.h
src/Engine/System/Scene/: SceneManager.cpp  SceneManager.h
src/Engine/System/Screen/: IGameScreen.cpp  IGameScreen.h  ScreenManager.cpp  ScreenManager.h
src/Engine/System/Time/: Time.h
src/Engine/Utils/: JsonParser.h
src/Game/HUD/: HUD.h  MyHudState.h
src/Game/Screen/: GameplayScreen.cpp  GameplayScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  OptionsScreen.cpp  OptionsScreen.h  StartScreen.cpp  StartScreen.h
src/Game/Scripts/: PlayerControlScript.cpp  Scripts.h
tools/: setup_third_party.ps1
ui/: README.md
ui/src/: App.vue  main.js  style.css
(+1 files in other folders)
